--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,8 @@
-syntax: glob
-
-*.pyc
-_build
-build
-dist/*
-*.py,cover
-*.orig
-.tox
-.cache
-htmlcov
-cover
-.coverage
-MANIFEST
-.project
-.pydevproject
-.komodoproject
-.idea
-*.egg-info
-*.egg
+EGG-INFO/
+*.param
+.smt/
+.smt*
+.cache/
+*docker_image.tar
+sumatra/*
+Data/
